# luamacaroons

./: .gitignore  README.md  Vagrantfile
libluamacaroons/: .gitignore  CMakeLists.txt  luamacaroon.h  macaroon.c  macaroon.h  main.c  run_test  test.lua  verifier.c  verifier.h
